Fix x-axis overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Inter, Helvetica, Arial, sans-serif;
     margin: 0;
     background-color: aliceblue;
-    
+    overflow-x: hidden;
 
 }
 
